# OpenGL

./: CMakeLists.txt  README.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeLists.txt
res/Shaders/: 2DfragmentShader.txt  2DvertexShader.txt  TextfragmentShader.txt  TextvertexShader.txt  fragmentShader.txt  lightFragmentShader.txt  skyboxFragmentShader.txt  vertexShader.txt
src/: Control.cpp  Control.h  main.cpp  values.cpp  values.h
src/EngineObjects/: EnginePrimitives.cpp  EnginePrimitives.h  Interface.cpp  Interface.h  Text.cpp  Text.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/Shaders/: Shader.cpp  Shader.h
